# config-template-python

./: .coveragerc  .editorconfig  .env-template  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  cspell.config.yaml  justfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.config/: mypy.ini
config/: mypy.ini
notebook/: run.ipynb
src/: __init__.py  __main__.py  args.py  data.py  process.py  types.py  validators.py
src/api/: order.py
src/lib/: order.py
src/service/: bill.py
src/shared/: args.py  datetime.py  file.py  logger.py  metrics.py  progress.py  request.py  retry.py  storage.py  traceback.py
tests/: __init__.py  test_args.py  test_main.py  test_process.py  test_validators.py
tests/__fixtures__/: order.json  order.py
tests/api/: test_order.py
tests/lib/: __init__.py  test_order.py
tests/service/: test_bill.py
tests/shared/: test_args.py  test_file.py  test_logger.py  test_progress.py  test_retry.py  test_storage.py
